Nuevo ícono en chilix

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,8 @@
     
     <!-- Enlace al archivo CSS -->
     <link rel="stylesheet" href="styles.css">
+
+    <link rel="icon" type="images/favicon.ico" href="favicon.ico">
 </head>
 <body>
     
