--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,6 +13,7 @@
     <!-- Enlace al archivo CSS -->
     <link rel="stylesheet" href="styles.css">
 
+    <!--Icono del sitio web-->
     <link rel="icon" type="images/favicon.ico" href="favicon.ico">
 </head>
 <body>
