fix: Se corrigió el icona

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="styles.css">
 
     <!--Icono del sitio web-->
-    <link rel="icon" type="images/favicon.ico" href="favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
     
