Se corrigió funcionalidad del carrito y persistencia en los datos

--- a/frontend/carrito.html
+++ b/frontend/carrito.html
@@ -27,7 +27,7 @@
                 <li><a href="index.html#quienes-somos" class="nav-link">¿Quiénes somos?</a></li>
                 <li><a href="index.html#productos" class="nav-link">Productos</a></li>
                 <li><a href="politicas.html" class="nav-link">Políticas</a></li>
-                <li><a href="login.html" class="nav-link" id="userLink">👤 Iniciar sesión</a></li>
+                <li><a href="login.html" class="nav-link" id="userLink">Iniciar sesión</a></li>
                 <li><a href="carrito.html" class="nav-link cart-link">
                     🛒 Carrito <span class="cart-badge" id="cartBadgeNav">0</span>
                 </a></li>
