--- a/frontend/quienes-somos.html
+++ b/frontend/quienes-somos.html
@@ -167,7 +167,7 @@
                 <div class="container">
                     <h2 class="section-title">Nuestro Fundador</h2>
                     <div class="founder-card">
-                        <div class="founder-avatar"><img src="images/img_yo.jpg" alt="founder-avatar"></div>
+                        <div class="founder-avatar"><img src="img_yo.jpg" alt="founder-avatar"></div>
                         <h3>David Velazquez</h3>
                         <p class="role">Fundador & CEO de ChiliX</p>
                         <p class="bio">
