Se corrigió funcionalidad del carrito para mejorar la UX

--- a/frontend/productos.html
+++ b/frontend/productos.html
@@ -46,23 +46,13 @@
     <div class="page-hero">
         <div class="container">
             <h1>Nuestros Productos</h1>
-            <p>Descubre el auténtico sabor mexicano en cada bocado. 100% artesanal, hecho con amor en el CECyT 8</p>
+            <p>Descubre el auténtico sabor mexicano en cada bocado. 100% artesanal XD, hecho con amor en el CECyT 8</p>
         </div>
     </div>
 
     <!-- CONTENIDO PRINCIPAL -->
     <section class="products-page">
         <div class="container">
-
-            <!-- FILTROS -->
-            <div class="filters">
-                <div class="filter-tags">
-                    <div class="filter-tag active">🌶️ Todos</div>
-                    <div class="filter-tag">⭐ Más vendidos</div>
-                    <div class="filter-tag">🆕 Nuevos</div>
-                    <div class="filter-tag">💎 Premium</div>
-                </div>
-            </div>
 
             <!-- PRODUCTO 1: ChiliX Snacks -->
             <div class="product-detail-card">
@@ -100,8 +90,8 @@
                                     <li><strong>Tamaño:</strong> 100g (porción individual perfecta)</li>
                                     <li><strong>Nivel de picante:</strong> Medio 🌶️🌶️🌶️</li>
                                     <li><strong>Textura:</strong> Extra crujiente</li>
-                                    <li><strong>Ideal para:</strong> Recreo, entre clases, o snack nocturno</li>
-                                    <li><strong>Caducidad:</strong> 30 días desde producción</li>
+                                    <li><strong>Ideal para:</strong> entre clases, o snack nocturnos</li>
+                                    <li><strong>Caducidad:</strong> 10 días desde producción</li>
                                     <li><strong>Empaque:</strong> Bolsa sellada herméticamente</li>
                                 </ul>
                             </div>
