--- a/frontend/quienes-somos.html
+++ b/frontend/quienes-somos.html
@@ -81,7 +81,7 @@
                         <div class="timeline-content">
                             <h3>Primeras Ventas y Validación</h3>
                             <p>
-                                Las primeras muestras fueron repartidas entre compañeros durante el recreo. 
+                                Las primeras muestras fueron repartidas entre compañeros entre clases. 
                                 La respuesta fue inmediata: los snacks se agotaban en minutos. Los estudiantes 
                                 pedían más variedades, más picante, y sobre todo, más cantidad. Era claro que 
                                 había una demanda real por productos de calidad hechos por estudiantes.
