--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,6 +16,9 @@
     <!--Icono del sitio web-->
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
+<!-- scripts -->
+<script src="/backend/config/config.js"></script>
+<script src="script.js"></script>
 <body>
     
     <!-- ========== NAVEGACIÓN ========== -->
