--- a/frontend/politicas.html
+++ b/frontend/politicas.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="styles.css">
    
 </head>
+<!-- scripts -->
+<script src="/backend/config/config.js"></script>
+<script src="script.js"></script>
 <body>
     
     <!-- ========== NAVEGACIÓN ========== -->
