--- a/frontend/quienes-somos.html
+++ b/frontend/quienes-somos.html
@@ -11,6 +11,9 @@
     
     <link rel="stylesheet" href="styles.css">
 </head>
+<!-- scripts -->
+<script src="/backend/config/config.js"></script>
+<script src="script.js"></script>
 <body>
     
     <!-- NAVEGACIÓN -->
