Fix: Agregar config.js en frontend y actualizar referencias

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,7 +17,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 <!-- scripts -->
-<script src="/backend/config/config.js"></script>
+<script src="config.js"></script>
 <script src="script.js"></script>
 <body>
     
