--- a/frontend/politicas.html
+++ b/frontend/politicas.html
@@ -13,7 +13,7 @@
    
 </head>
 <!-- scripts -->
-<script src="/backend/config/config.js"></script>
+<script src="config.js"></script>
 <script src="script.js"></script>
 <body>
     
