--- a/frontend/login.html
+++ b/frontend/login.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <!-- scripts -->
-<script src="/backend/config/config.js"></script>
+<script src="config.js"></script>
 <script src="script.js"></script>
 <body>
 
