--- a/frontend/quienes-somos.html
+++ b/frontend/quienes-somos.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <!-- scripts -->
-<script src="/backend/config/config.js"></script>
+<script src="config.js"></script>
 <script src="script.js"></script>
 <body>
     
