Se mejoró la infraestructura y se agregaron imagenes

--- a/frontend/productos.html
+++ b/frontend/productos.html
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;900&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="styles.css">
+     <!--Icono del sitio web-->
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
 </head>
 <!-- scripts -->
@@ -62,14 +64,14 @@
                 <div class="product-detail-content">
                     <div class="product-gallery">
                         <div class="main-product-image">
-                            <span>🌶️</span>
+                            <span><img src="/images/snacks-2.png" alt="snacks -1 " width="480px"></span>
                             <div class="product-badge-large">Más vendido</div>
                         </div>
                         <div class="thumbnail-gallery">
-                            <div class="thumbnail">🌶️</div>
-                            <div class="thumbnail">🔥</div>
-                            <div class="thumbnail">🍋</div>
-                            <div class="thumbnail">✨</div>
+                            <div class="thumbnail"><img src="/images/snacks-2-1.png" alt=" snacks 1.1" width="80px"></div>
+                            <div class="thumbnail"><img src="/images/snacks-2-2.jpg" alt=" snacks 1.1" width="80px"></div>
+                            <div class="thumbnail"><img src="/images/snacks-2-3.jpg" alt=" snacks 1.1" width="60px"></div>
+                            <div class="thumbnail"><img src="/images/snacks-2-4.png" alt=" snacks 1.1" width="80px"></div>
                         </div>
                     </div>
 
@@ -117,6 +119,7 @@
                                 </p>
                             </div>
                         </div>
+                        <br>
 
                         <div class="add-to-cart-section">
                             <div class="quantity-selector">
@@ -137,14 +140,14 @@
                 <div class="product-detail-content">
                     <div class="product-gallery">
                         <div class="main-product-image" style="background: linear-gradient(135deg, #FFD84D, #FFA500);">
-                            <span>🔥</span>
+                            <span><img src="/images/snacks-3.jpg" alt="snack" width="300px"></span>
                             <div class="product-badge-large" style="background: var(--color-primary); color: var(--color-white);">Nuevo</div>
                         </div>
                         <div class="thumbnail-gallery">
-                            <div class="thumbnail">🔥</div>
-                            <div class="thumbnail">🌶️</div>
-                            <div class="thumbnail">🥜</div>
-                            <div class="thumbnail">🌽</div>
+                           <div class="thumbnail"><img src="/images/snacks-3-1.jpg" alt=" snacks 1.1" width="70px"></div>
+                            <div class="thumbnail"><img src="/images/snacks-3-2.jpg" alt=" snacks 1.1" width="80px"></div>
+                            <div class="thumbnail"><img src="/images/snacks-3-3.jpg" alt=" snacks 1.1" width="65px"></div>
+                            <div class="thumbnail"><img src="/images/mix-4.jpg" alt=" snacks 1.1" width="95px"></div>
                         </div>
                     </div>
 
@@ -194,6 +197,7 @@
                                 </p>
                             </div>
                         </div>
+                        <br>
 
                         <div class="add-to-cart-section">
                             <div class="quantity-selector">
@@ -214,14 +218,14 @@
                 <div class="product-detail-content">
                     <div class="product-gallery">
                         <div class="main-product-image" style="background: linear-gradient(135deg, #1A1A1A, #4A4A4A);">
-                            <span>📦</span>
+                            <span><img src="/images/box.jpg" alt="box" width="350px"></span>
                             <div class="product-badge-large" style="background: linear-gradient(135deg, #FFD84D, #FFA500); color: var(--color-dark);">Premium</div>
                         </div>
                         <div class="thumbnail-gallery">
-                            <div class="thumbnail">📦</div>
-                            <div class="thumbnail">🎁</div>
-                            <div class="thumbnail">⭐</div>
-                            <div class="thumbnail">💎</div>
+                            <div class="thumbnail"><img src="/images/box-4.jpg" alt="box" width="70px"></div>
+                            <div class="thumbnail"><img src="/images/box-1.jpg" alt="box" width="70px"></div>
+                            <div class="thumbnail"><img src="/images/box-2.jpg" alt="box" width="45px"></div>
+                            <div class="thumbnail"><img src="/images/box-3.jpg" alt="box" width="85px"></div>
                         </div>
                     </div>
 
@@ -278,6 +282,7 @@
                                 </p>
                             </div>
                         </div>
+                        <br>
 
                         <div class="add-to-cart-section">
                             <div class="quantity-selector">
