--- a/frontend/login.html
+++ b/frontend/login.html
@@ -12,6 +12,8 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="styles.css">
+     <!--Icono del sitio web-->
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 <!-- scripts -->
 <script src="config.js"></script>
