--- a/frontend/politicas.html
+++ b/frontend/politicas.html
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;900&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="styles.css">
+     <!--Icono del sitio web-->
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
    
 </head>
 <!-- scripts -->
