Se agregaron imagenes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -78,7 +78,7 @@
             <!-- Imagen decorativa de productos -->
             <div class="hero-image animate-float">
                 <div class="product-showcase">
-                    <div class="product-circle"><img src="/images/snacks-1.png" alt="snacks"></div>
+                    <div class="product-circle"><img src="snacks-1.png" alt="snacks"></div>
                 </div>
             </div>
         </div>
@@ -178,13 +178,13 @@
                     <div class="product-images">
                         <!-- Imagen principal -->
                         <div class="main-image">
-                            <img src="/images/snacks-2.png" alt="ChiliX Snacks" onerror="this.parentElement.innerHTML='<div class=\'image-placeholder\'><span class=\'product-emoji\'>🌶️</span></div>'">
+                            <img src="snacks-2.png" alt="ChiliX Snacks" onerror="this.parentElement.innerHTML='<div class=\'image-placeholder\'><span class=\'product-emoji\'>🌶️</span></div>'">
                         </div>
                         <!-- Miniaturas -->
                         <div class="thumbnail-images">
-                            <img src="/images/snacks-2-1.png" alt="ChiliX Snacks 2" onerror="this.style.display='none'">
-                            <img src="/images/snacks-2-2.jpg" alt="ChiliX Snacks 3" onerror="this.style.display='none'">
-                            <img src="/images/snacks-2-3.jpg" alt="ChiliX Snacks 4" onerror="this.style.display='none'">
+                            <img src="snacks-2-1.png" alt="ChiliX Snacks 2" onerror="this.style.display='none'">
+                            <img src="snacks-2-2.jpg" alt="ChiliX Snacks 3" onerror="this.style.display='none'">
+                            <img src="snacks-2-3.jpg" alt="ChiliX Snacks 4" onerror="this.style.display='none'">
                         </div>
                     </div>
                     <span class="product-badge">Más vendido</span>
@@ -208,13 +208,13 @@
                     <div class="product-images">
                         <!-- Imagen principal -->
                         <div class="main-image">
-                            <img src="/images/snacks-3.jpg" alt="ChiliX Mix" onerror="this.parentElement.innerHTML='<div class=\'image-placeholder\' style=\'background: linear-gradient(135deg, #FFD84D, #FFA500);\'><span class=\'product-emoji\'>🔥</span></div>'">
+                            <img src="snacks-3.jpg" alt="ChiliX Mix" onerror="this.parentElement.innerHTML='<div class=\'image-placeholder\' style=\'background: linear-gradient(135deg, #FFD84D, #FFA500);\'><span class=\'product-emoji\'>🔥</span></div>'">
                         </div>
                         <!-- Miniaturas -->
                         <div class="thumbnail-images">
-                            <img src="/images/snacks-3-1.jpg" alt="ChiliX Mix 2" onerror="this.style.display='none'">
-                            <img src="/images/snacks-3-2.jpg" alt="ChiliX Mix 3" onerror="this.style.display='none'">
-                            <img src="/images/snacks-3-3.jpg" alt="ChiliX Mix 4" onerror="this.style.display='none'">
+                            <img src="snacks-3-1.jpg" alt="ChiliX Mix 2" onerror="this.style.display='none'">
+                            <img src="snacks-3-2.jpg" alt="ChiliX Mix 3" onerror="this.style.display='none'">
+                            <img src="snacks-3-3.jpg" alt="ChiliX Mix 4" onerror="this.style.display='none'">
                         </div>
                     </div>
                     <span class="product-badge new">Nuevo</span>
@@ -238,13 +238,13 @@
                     <div class="product-images">
                         <!-- Imagen principal -->
                         <div class="main-image">
-                            <img src="/images/box.jpg" alt="ChiliX Box" onerror="this.parentElement.innerHTML='<div class=\'image-placeholder\' style=\'background: linear-gradient(135deg, #1A1A1A, #4A4A4A);\'><span class=\'product-emoji\'>📦</span></div>'">
+                            <img src="box.jpg" alt="ChiliX Box" onerror="this.parentElement.innerHTML='<div class=\'image-placeholder\' style=\'background: linear-gradient(135deg, #1A1A1A, #4A4A4A);\'><span class=\'product-emoji\'>📦</span></div>'">
                         </div>
                         <!-- Miniaturas -->
                         <div class="thumbnail-images">
-                            <img src="/images/box-2.jpg" alt="ChiliX Box 2" onerror="this.style.display='none'">
-                            <img src="/images/box-3.jpg" alt="ChiliX Box 3" onerror="this.style.display='none'">
-                            <img src="/images/box-1.jpg" alt="ChiliX Box 4" onerror="this.style.display='none'">
+                            <img src="box-2.jpg" alt="ChiliX Box 2" onerror="this.style.display='none'">
+                            <img src="box-3.jpg" alt="ChiliX Box 3" onerror="this.style.display='none'">
+                            <img src="box-1.jpg" alt="ChiliX Box 4" onerror="this.style.display='none'">
                         </div>
                     </div>
                     <span class="product-badge premium">Premium</span>
