--- a/frontend/productos.html
+++ b/frontend/productos.html
@@ -64,14 +64,14 @@
                 <div class="product-detail-content">
                     <div class="product-gallery">
                         <div class="main-product-image">
-                            <span><img src="/images/snacks-2.png" alt="snacks -1 " width="480px"></span>
+                            <span><img src="snacks-2.png" alt="snacks -1 " width="480px"></span>
                             <div class="product-badge-large">Más vendido</div>
                         </div>
                         <div class="thumbnail-gallery">
-                            <div class="thumbnail"><img src="/images/snacks-2-1.png" alt=" snacks 1.1" width="80px"></div>
-                            <div class="thumbnail"><img src="/images/snacks-2-2.jpg" alt=" snacks 1.1" width="80px"></div>
-                            <div class="thumbnail"><img src="/images/snacks-2-3.jpg" alt=" snacks 1.1" width="60px"></div>
-                            <div class="thumbnail"><img src="/images/snacks-2-4.png" alt=" snacks 1.1" width="80px"></div>
+                            <div class="thumbnail"><img src="snacks-2-1.png" alt=" snacks 1.1" width="80px"></div>
+                            <div class="thumbnail"><img src="snacks-2-2.jpg" alt=" snacks 1.1" width="80px"></div>
+                            <div class="thumbnail"><img src="snacks-2-3.jpg" alt=" snacks 1.1" width="60px"></div>
+                            <div class="thumbnail"><img src="snacks-2-4.png" alt=" snacks 1.1" width="80px"></div>
                         </div>
                     </div>
 
@@ -140,14 +140,14 @@
                 <div class="product-detail-content">
                     <div class="product-gallery">
                         <div class="main-product-image" style="background: linear-gradient(135deg, #FFD84D, #FFA500);">
-                            <span><img src="/images/snacks-3.jpg" alt="snack" width="300px"></span>
+                            <span><img src="snacks-3.jpg" alt="snack" width="300px"></span>
                             <div class="product-badge-large" style="background: var(--color-primary); color: var(--color-white);">Nuevo</div>
                         </div>
                         <div class="thumbnail-gallery">
-                           <div class="thumbnail"><img src="/images/snacks-3-1.jpg" alt=" snacks 1.1" width="70px"></div>
-                            <div class="thumbnail"><img src="/images/snacks-3-2.jpg" alt=" snacks 1.1" width="80px"></div>
-                            <div class="thumbnail"><img src="/images/snacks-3-3.jpg" alt=" snacks 1.1" width="65px"></div>
-                            <div class="thumbnail"><img src="/images/mix-4.jpg" alt=" snacks 1.1" width="95px"></div>
+                           <div class="thumbnail"><img src="snacks-3-1.jpg" alt=" snacks 1.1" width="70px"></div>
+                            <div class="thumbnail"><img src="snacks-3-2.jpg" alt=" snacks 1.1" width="80px"></div>
+                            <div class="thumbnail"><img src="snacks-3-3.jpg" alt=" snacks 1.1" width="65px"></div>
+                            <div class="thumbnail"><img src="mix-4.jpg" alt=" snacks 1.1" width="95px"></div>
                         </div>
                     </div>
 
@@ -218,14 +218,14 @@
                 <div class="product-detail-content">
                     <div class="product-gallery">
                         <div class="main-product-image" style="background: linear-gradient(135deg, #1A1A1A, #4A4A4A);">
-                            <span><img src="/images/box.jpg" alt="box" width="350px"></span>
+                            <span><img src="box.jpg" alt="box" width="350px"></span>
                             <div class="product-badge-large" style="background: linear-gradient(135deg, #FFD84D, #FFA500); color: var(--color-dark);">Premium</div>
                         </div>
                         <div class="thumbnail-gallery">
-                            <div class="thumbnail"><img src="/images/box-4.jpg" alt="box" width="70px"></div>
-                            <div class="thumbnail"><img src="/images/box-1.jpg" alt="box" width="70px"></div>
-                            <div class="thumbnail"><img src="/images/box-2.jpg" alt="box" width="45px"></div>
-                            <div class="thumbnail"><img src="/images/box-3.jpg" alt="box" width="85px"></div>
+                            <div class="thumbnail"><img src="box-4.jpg" alt="box" width="70px"></div>
+                            <div class="thumbnail"><img src="box-1.jpg" alt="box" width="70px"></div>
+                            <div class="thumbnail"><img src="box-2.jpg" alt="box" width="45px"></div>
+                            <div class="thumbnail"><img src="box-3.jpg" alt="box" width="85px"></div>
                         </div>
                     </div>
 
